// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion sample snapshot testing Disabled 1`] = `
<div>
  <div
    class="makeStyles-accordionContainer-2"
  >
    <div
      class="HvAccordion-root"
      id="disabled-item1"
    >
      <h3
        class="HvTypography-root HvTypography-normalText"
      >
        <div
          aria-disabled="true"
          aria-expanded="false"
          class="HvAccordion-label HvAccordion-disabled HvTypography-root HvTypography-highlightText"
          id="disabled-item1-button"
          role="button"
          tabindex="0"
        >
          <div
            class="HvIconBase-root HvIconBase-xs"
            name="DropDownXS"
          >
            <svg
              focusable="false"
              height="12"
              viewBox="0 0 12 12"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="color0"
                d="M5.99994 8.65L1.4 4.05l.7-.7L6 7.25l3.9-3.9.7.7z"
                fill="#999999"
              />
            </svg>
          </div>
          Analytics
        </div>
      </h3>
      <div
        aria-labelledby="disabled-item1-button"
        class="HvAccordion-container HvAccordion-hidden"
        id="disabled-item1-container"
        role="region"
      >
        <ul
          class="makeStyles-accordionSpacing-1 HvListContainer-root"
        >
          <li
            class="HvListItem-root HvListItem-gutters HvListItem-condensed HvListItem-interactive HvFocus-root HvFocus-focusDisabled"
            tabindex="0"
          >
            Views
          </li>
          <li
            class="HvListItem-root HvListItem-gutters HvListItem-condensed HvListItem-interactive HvFocus-root HvFocus-focusDisabled"
            tabindex="-1"
          >
            Parameters
          </li>
        </ul>
      </div>
    </div>
    <div
      class="HvAccordion-root"
      id="disabled-item2"
    >
      <h3
        class="HvTypography-root HvTypography-normalText"
      >
        <div
          aria-disabled="false"
          aria-expanded="false"
          class="HvAccordion-label HvTypography-root HvTypography-highlightText"
          id="disabled-item2-button"
          role="button"
          tabindex="0"
        >
          <div
            class="HvIconBase-root HvIconBase-xs"
            name="DropDownXS"
          >
            <svg
              focusable="false"
              height="12"
              viewBox="0 0 12 12"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="color0"
                d="M5.99994 8.65L1.4 4.05l.7-.7L6 7.25l3.9-3.9.7.7z"
                fill="#414141"
              />
            </svg>
          </div>
          System
        </div>
      </h3>
      <div
        aria-labelledby="disabled-item2-button"
        class="HvAccordion-container HvAccordion-hidden"
        id="disabled-item2-container"
        role="region"
      >
        <ul
          class="makeStyles-accordionSpacing-1 HvListContainer-root"
        >
          <li
            class="HvListItem-root HvListItem-gutters HvListItem-condensed HvListItem-interactive HvFocus-root HvFocus-focusDisabled"
            tabindex="0"
          >
            Settings
          </li>
          <li
            class="HvListItem-root HvListItem-gutters HvListItem-condensed HvListItem-interactive HvFocus-root HvFocus-focusDisabled"
            tabindex="-1"
          >
            Network
          </li>
        </ul>
      </div>
    </div>
    <div
      class="HvAccordion-root"
      id="disabled-item3"
    >
      <h3
        class="HvTypography-root HvTypography-normalText"
      >
        <div
          aria-disabled="true"
          aria-expanded="false"
          class="HvAccordion-label HvAccordion-disabled HvTypography-root HvTypography-highlightText"
          id="disabled-item3-button"
          role="button"
          tabindex="0"
        >
          <div
            class="HvIconBase-root HvIconBase-xs"
            name="DropDownXS"
          >
            <svg
              focusable="false"
              height="12"
              viewBox="0 0 12 12"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="color0"
                d="M5.99994 8.65L1.4 4.05l.7-.7L6 7.25l3.9-3.9.7.7z"
                fill="#999999"
              />
            </svg>
          </div>
          Data
        </div>
      </h3>
      <div
        aria-labelledby="disabled-item3-button"
        class="HvAccordion-container HvAccordion-hidden"
        id="disabled-item3-container"
        role="region"
      >
        <ul
          class="makeStyles-accordionSpacing-1 HvListContainer-root"
        >
          <li
            class="HvListItem-root HvListItem-gutters HvListItem-condensed HvListItem-interactive HvFocus-root HvFocus-focusDisabled"
            tabindex="0"
          >
            Storage
          </li>
          <li
            class="HvListItem-root HvListItem-gutters HvListItem-condensed HvListItem-interactive HvFocus-root HvFocus-focusDisabled"
            tabindex="-1"
          >
            Memory
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion sample snapshot testing Main 1`] = `
<div>
  <div
    class="makeStyles-accordionContainer-2"
  >
    <div
      class="HvAccordion-root"
      id="item1"
    >
      <h3
        class="HvTypography-root HvTypography-normalText"
      >
        <div
          aria-disabled="false"
          aria-expanded="false"
          class="HvAccordion-label HvTypography-root HvTypography-highlightText"
          id="item1-button"
          role="button"
          tabindex="0"
        >
          <div
            class="HvIconBase-root HvIconBase-xs"
            name="DropDownXS"
          >
            <svg
              focusable="false"
              height="12"
              viewBox="0 0 12 12"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="color0"
                d="M5.99994 8.65L1.4 4.05l.7-.7L6 7.25l3.9-3.9.7.7z"
                fill="#414141"
              />
            </svg>
          </div>
          Analytics
        </div>
      </h3>
      <div
        aria-labelledby="item1-button"
        class="HvAccordion-container HvAccordion-hidden"
        id="item1-container"
        role="region"
      >
        <ul
          class="makeStyles-accordionSpacing-1 HvListContainer-root"
        >
          <li
            class="HvListItem-root HvListItem-gutters HvListItem-condensed HvListItem-interactive HvFocus-root HvFocus-focusDisabled"
            tabindex="0"
          >
            Views
          </li>
          <li
            class="HvListItem-root HvListItem-gutters HvListItem-condensed HvListItem-interactive HvFocus-root HvFocus-focusDisabled"
            tabindex="-1"
          >
            Parameters
          </li>
        </ul>
      </div>
    </div>
    <div
      class="HvAccordion-root"
      id="item2"
    >
      <h3
        class="HvTypography-root HvTypography-normalText"
      >
        <div
          aria-disabled="false"
          aria-expanded="false"
          class="HvAccordion-label HvTypography-root HvTypography-highlightText"
          id="item2-button"
          role="button"
          tabindex="0"
        >
          <div
            class="HvIconBase-root HvIconBase-xs"
            name="DropDownXS"
          >
            <svg
              focusable="false"
              height="12"
              viewBox="0 0 12 12"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="color0"
                d="M5.99994 8.65L1.4 4.05l.7-.7L6 7.25l3.9-3.9.7.7z"
                fill="#414141"
              />
            </svg>
          </div>
          System
        </div>
      </h3>
      <div
        aria-labelledby="item2-button"
        class="HvAccordion-container HvAccordion-hidden"
        id="item2-container"
        role="region"
      >
        <ul
          class="makeStyles-accordionSpacing-1 HvListContainer-root"
        >
          <li
            class="HvListItem-root HvListItem-gutters HvListItem-condensed HvListItem-interactive HvFocus-root HvFocus-focusDisabled"
            tabindex="0"
          >
            Settings
          </li>
          <li
            class="HvListItem-root HvListItem-gutters HvListItem-condensed HvListItem-interactive HvFocus-root HvFocus-focusDisabled"
            tabindex="-1"
          >
            Network
          </li>
        </ul>
      </div>
    </div>
    <div
      class="HvAccordion-root"
      id="item3"
    >
      <h3
        class="HvTypography-root HvTypography-normalText"
      >
        <div
          aria-disabled="false"
          aria-expanded="false"
          class="HvAccordion-label HvTypography-root HvTypography-highlightText"
          id="item3-button"
          role="button"
          tabindex="0"
        >
          <div
            class="HvIconBase-root HvIconBase-xs"
            name="DropDownXS"
          >
            <svg
              focusable="false"
              height="12"
              viewBox="0 0 12 12"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="color0"
                d="M5.99994 8.65L1.4 4.05l.7-.7L6 7.25l3.9-3.9.7.7z"
                fill="#414141"
              />
            </svg>
          </div>
          Data
        </div>
      </h3>
      <div
        aria-labelledby="item3-button"
        class="HvAccordion-container HvAccordion-hidden"
        id="item3-container"
        role="region"
      >
        <ul
          class="makeStyles-accordionSpacing-1 HvListContainer-root"
        >
          <li
            class="HvListItem-root HvListItem-gutters HvListItem-condensed HvListItem-interactive HvFocus-root HvFocus-focusDisabled"
            tabindex="0"
          >
            Storage
          </li>
          <li
            class="HvListItem-root HvListItem-gutters HvListItem-condensed HvListItem-interactive HvFocus-root HvFocus-focusDisabled"
            tabindex="-1"
          >
            Memory
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
